--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-	<title></title>
+	<title>Bienvenidos</title>
 </head>
 <body>
-
+<h1>Bienvenidos al curso de Git</h1>
+<h2>Más Información</h2>
 </body>
 </html>
